--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
                 <img src="sad-robot.png" alt="404" />
             </div>
             <div class="content-right">
-                <h4>Page Not Found</h4>
+                <h4><span>404</span>Page Not Found</h4>
                 <p>
                     We can't find the page you are looking for.
                     you can either return to the previous page or visit our homepage.
 
                 </p>
-                <a href="#" title="Visit Home Page">Visit Homepage</a>
+                <a href="#" title="Visit Home Page" class="btn-link">Visit Homepage</a>
             </div>
         </div>
     </body>
